// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNotificationContentJssStyle() should return correct JssStyle 1`] = `
{
  "@media(min-width:760px)": {
    "marginLeft": "-8px",
  },
  "display": "grid",
  "gap": "4px",
  "maxWidth": "50rem",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle 1`] = `
{
  "@media(max-width:759px)": {
    "display": "none",
  },
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(255, 226, 228, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(58, 15, 15, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(211, 225, 255, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto",
  },
  "background": "rgba(211, 225, 255, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr) auto",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: false 3`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(4, 41, 78, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: true 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto",
  },
  "background": "rgba(211, 225, 255, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: true 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr) auto auto",
  },
  "background": "rgba(211, 225, 255, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr) auto",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(211, 225, 255, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(4, 41, 78, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(228, 255, 236, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(0, 51, 32, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: false 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(255, 244, 210, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: false 2`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "auto minmax(auto, 1fr)",
  },
  "background": "rgba(54, 43, 10, 0.7)",
  "borderRadius": "4px",
  "display": "grid",
  "gap": "16px",
  "gridTemplateColumns": "minmax(auto, 1fr)",
  "padding": "16px",
  "placeItems": "start",
}
`;
